--- a/src/main/webapp/WEB-INF/templates-relatorios/relatorio-detalhes-avaliacao_old.jrxml
+++ b/src/main/webapp/WEB-INF/templates-relatorios/relatorio-detalhes-avaliacao_old.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" language="groovy" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="142666df-1bd1-4422-a844-93ee33ac154f">
-	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="169"/>
-	<property name="ireport.y" value="198"/>
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="142666df-1bd1-4422-a844-93ee33ac154f">
+	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="17"/>
 	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
@@ -43,19 +43,16 @@
 			<pen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
+	<subDataset name="Table Dataset 1" uuid="fb384b78-0269-45af-87a4-5fdbb960b571"/>
+	<subDataset name="dataset1" uuid="a0d48e7c-a242-48e7-baab-67bb106e3a0b"/>
+	<subDataset name="New Dataset 1" uuid="4f380764-ef45-430f-a2e6-f6450e71ca90"/>
+	<subDataset name="Table Dataset 2" uuid="fb036e9f-236e-43ee-8176-c652711211c7"/>
 	<parameter name="pPagina" class="java.lang.String"/>
 	<parameter name="pTitulo" class="java.lang.String"/>
 	<parameter name="pTamanho" class="java.lang.String"/>
 	<parameter name="pDataHoraAvaliacao" class="java.lang.String"/>
 	<parameter name="rnAvaliada" class="java.lang.String"/>
-	<parameter name="teste" class="java.lang.String"/>
-	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
-		<defaultValueExpression><![CDATA["C:\\Users\\Lyandro\\Desktop\\"]]></defaultValueExpression>
-	</parameter>
 	<field name="descricao" class="java.lang.String"/>
-	<field name="id" class="java.lang.String"/>
-	<field name="numeroOcorrencias" class="java.lang.String"/>
-	<field name="linhas" class="java.util.List"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -114,50 +111,22 @@
 			<line>
 				<reportElement uuid="c0051e6c-900d-4392-96a2-b920f9a27131" x="1" y="281" width="555" height="1"/>
 			</line>
-			<staticText>
-				<reportElement uuid="8acb2283-4613-41b1-8dba-4c93c97763ec" x="285" y="283" width="94" height="23" forecolor="#000000"/>
-				<textElement textAlignment="Center" verticalAlignment="Bottom">
-					<font size="18" isBold="false"/>
-				</textElement>
-				<text><![CDATA[Quantidade]]></text>
-			</staticText>
-			<staticText>
-				<reportElement uuid="8acb2283-4613-41b1-8dba-4c93c97763ec" x="378" y="283" width="178" height="23" forecolor="#000000"/>
-				<textElement textAlignment="Center" verticalAlignment="Bottom">
-					<font size="18" isBold="false"/>
-				</textElement>
-				<text><![CDATA[Linha(s) de Cógido Fonte]]></text>
-			</staticText>
 		</band>
 	</title>
 	<detail>
-		<band height="21" splitType="Stretch">
+		<band height="15" splitType="Stretch">
 			<elementGroup/>
 			<textField>
-				<reportElement uuid="b6034e4e-5312-4aa1-afa2-5b74d09f1575" x="0" y="0" width="286" height="15" isPrintWhenDetailOverflows="true"/>
+				<reportElement uuid="b6034e4e-5312-4aa1-afa2-5b74d09f1575" x="0" y="0" width="555" height="14"/>
 				<textElement>
 					<paragraph tabStopWidth="40"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{id}+"  "+$F{descricao}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement uuid="b6034e4e-5312-4aa1-afa2-5b74d09f1575" x="285" y="0" width="94" height="15"/>
-				<textElement textAlignment="Center">
-					<paragraph tabStopWidth="40"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{numeroOcorrencias}]]></textFieldExpression>
-			</textField>
-			<textField isStretchWithOverflow="true">
-				<reportElement uuid="b6034e4e-5312-4aa1-afa2-5b74d09f1575" x="378" y="0" width="177" height="15" isPrintWhenDetailOverflows="true"/>
-				<textElement textAlignment="Left">
-					<paragraph tabStopWidth="40"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{linhas}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{descricao}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="28" splitType="Stretch"/>
+		<band height="45" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
 		<band height="54" splitType="Stretch">
