--- a/src/main/webapp/inicial_arquivos/css/default.css
+++ b/src/main/webapp/inicial_arquivos/css/default.css
@@ -23,8 +23,7 @@
 		background-color: #0A5517;
 		background-image: -moz-radial-gradient(center, ellipse cover, #19882c 1%, #025310 100%);
 		/* FF3.6+ */
-		background-image: -webkit-gradient(radial, center center, 0px, center center, 100%,
-			color-stop(1%, #19882c), color-stop(100%, #025310));
+		background-image: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(1%, #19882c), color-stop(100%, #025310));
 		/* Chrome,Safari4+ */
 		background-image: -webkit-radial-gradient(center, ellipse cover, #19882c 1%, #025310 100%);
 		/* Chrome10+,Safari5.1+ */
@@ -34,8 +33,7 @@
 		/* IE10+ */
 		background-image: radial-gradient(ellipse at center, #19882c 1%, #025310 100%);
 		/* W3C */
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#19882c',
-			endColorstr='#025310', GradientType=1);
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#19882c',endColorstr='#025310', GradientType=1);
 		/* IE6-9 fallback on horizontal gradient */
 	}
 	a {
